Add finished androidTest cases files Add Database files and changes since last commit
	new file:   app/src/androidTest/java/com/learn/heddy/awesomemovies/data/TestDb.java
	modified:   app/src/androidTest/java/com/learn/heddy/awesomemovies/data/TestMovieContract.java
	new file:   app/src/androidTest/java/com/learn/heddy/awesomemovies/data/TestProvider.java
	new file:   app/src/androidTest/java/com/learn/heddy/awesomemovies/data/TestUriMatcher.java
	new file:   app/src/androidTest/java/com/learn/heddy/awesomemovies/data/TestUtility.java
	new file:   app/src/androidTest/java/com/learn/heddy/awesomemovies/utils/PollingCheck.java
	modified:   app/src/main/AndroidManifest.xml
	modified:   app/src/main/java/com/learn/heddy/awesomemovies/data/MovieContract.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
         </meta-data>
         </activity>
 
+        <provider
+            android:authorities="com.learn.heddy.awesomemovies"
+            android:name=".data.MovieProvider"/>
     </application>
 
 </manifest>
