--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,15 @@
         </meta-data>
         </activity>
 
+        <activity
+            android:name=".ReviewsActivity"
+            android:label="@string/title_activity_detail"
+            android:parentActivityName=".DetailActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".DetailActivity" />
+        </activity>
+
         <provider
             android:authorities="com.learn.heddy.awesomemovies"
             android:name=".data.MovieProvider"/>
